--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://irickman.github.io/blog
+production_url : http://irickman.github.io
 
 gems: ["jekyll-sitemap"]
 
