--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Data: A Science
+
+title: Data - A Science
 description: Posts on data sets, data science, and data viz.
 
 url: http://irickman.github.io
