--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Data - A Science
 description: Posts on data sets, data science, and data viz.
 
-url: http://irickman.github.io
+url: http://irarickman.com
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
